--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<audio id="applause-audio" src="sounds/applause.mp3"></audio>
+<audio id="boo-audio" src="sounds/boo.mp3"></audio>
+<audio id="gasp-audio" src="sounds/gasp.mp3"></audio>
+<audio id="tada-audio" src="sounds/tada.mp3"></audio>
+<audio id="victory-audio" src="sounds/victory.mp3"></audio>
+<audio id="wrong-audio" src="sounds/wrong.mp3"></audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
